--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAQTcBM9GD8wLfJSdqguypf-VecA_tPKY0</string>
+	<string>AIzaSyBQvPmwuU9cIMZ5qlM4mh94fH_QogKXqVE</string>
 	<key>GCM_SENDER_ID</key>
-	<string>263645205630</string>
+	<string>23728065809</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.firebaseAuthEcm</string>
 	<key>PROJECT_ID</key>
-	<string>test-project-cli-fffa7</string>
+	<string>fir-store-72037</string>
 	<key>STORAGE_BUCKET</key>
-	<string>test-project-cli-fffa7.firebasestorage.app</string>
+	<string>fir-store-72037.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:263645205630:ios:1e345eca88069980b7342f</string>
+	<string>1:23728065809:ios:8eeba769c04d1132f350b0</string>
 </dict>
 </plist>
