--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
+  elegant_notification: ^2.5.1
   # cloud_firestore: ^6.0.0
 
 dev_dependencies:
